<resources>
    <string name="app_name">team_repo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage_list_and_value">List of Items\nTotal value: $</string>
    <string name="homepage_total_value">0.00</string>
    <string name="select">Select</string>
    <string name="sort_filter">Sort/Filter</string>
    <string name="item_name">Item Name</string>
    <string name="item_detail_text">Make:\n\nValue:\n\nDate Added:</string>
    <string name="make">Make</string>
    <string name="dollar_sign">$</string>
    <string name="item_value">0.00</string>
    <string name="item_purchase_date">2023-11-01</string>

    <string name="item_image">Item Image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_date_available">No Date Available</string>

    <string name="add">Add</string>

    <string name="sort_by">Sort by\n</string>
    <string name="sort_and_filter_by">"Sort and Filter by "</string>
    <string name="date_ascending">Date Ascending</string>
    <string name="date_descending">Date Descending</string>
    <string name="description_asc">Description Asc</string>
    <string name="description_desc">Description Desc</string>
    <string name="est_value_asc">Est Value Asc</string>
    <string name="est_values_desc">Est Values Desc</string>
    <string name="make_ascending">Make Ascending</string>
    <string name="make_descending">Make descending</string>
    <string name="tags_ascending">Tags Ascending</string>
    <string name="tags_descending">Tags Descending</string>
    <string name="filter_by">Filter By</string>
    <string name="scan_image_desc_instructions">Choose a photo to be scanned for a barcode.\nThis barcode should load a description to input as the item\'s description.</string>
    <string name="scan_image_sn_instructions">Choose a photo to be scanned for a serial number.</string>
    <string name="scanned_item_desc_header">Scanned Item Description From Barcode:</string>
    <string name="scanned_item_sn_header">Scanned Serial Number From Image:</string>

</resources>